[package]
name = "rust-dbg-enhancer"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.1"
pest_derive = "2.1.0"
pest-ast = "0.3.3"
from-pest = "0.3.1"
snafu = "0.4.1"

[dev-dependencies]
insta = "0.8.1"
